<resources>
    <string name="app_name">Y-Social-Media-App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="y_logo">Y Logo</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_up_now">Don"'"t have an account? Sign Up</string>
    <string name="sign_in_error">Email or password is incorrect</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment">Hello </string>
    <!-- For Pfofile Page String    -->
    <string name="bio">Bio</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="post_title">Title</string>
    <string name="post_description">Description</string>
    <string name="submit_post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="post">Create Post</string>
    <string name="optional">Optional</string>
    <string name="upload_image_text">You may upload your image here</string>

</resources>