<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreatePostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/post"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            />
        <EditText
            android:background="@drawable/edit_text_border"
            android:id="@+id/post_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:hint="@string/post_title"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:background="@drawable/edit_text_border"
            android:id="@+id/post_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textMultiLine"
            android:lines="8"
            android:gravity="top|start"
            android:scrollbars="vertical"
            android:maxLines="10"
            android:textSize="20sp"
            android:hint="@string/post_description"
            android:layout_marginBottom="20dp"
            />

        <ImageView
            android:id="@+id/post_image_result"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="300dp"
            android:layout_marginBottom="20dp"
            android:scaleType="fitCenter"
            android:visibility="gone"
            />


        <LinearLayout
            android:background="@drawable/edit_text_border"
            android:id="@+id/upload_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/baseline_backup_24"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optional"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_image_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center_horizontal"

            >
            <Button
                android:id="@+id/cancel_post_button"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginEnd="30sp"
                />
            <Button
                android:id="@+id/post_button"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/submit_post"/>
        </LinearLayout>

</LinearLayout>

    </ScrollView>
