<?xml version="1.0" encoding="utf-8"?>
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/main"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".LoginActivity"-->
<!--    android:padding="20dp">-->


<!--    <ImageView-->
<!--        android:id="@+id/login_y_logo"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="200dp"-->
<!--        android:contentDescription="@string/y_logo"-->
<!--        android:src="@drawable/y_logo"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="30dp" />-->

<!--    &lt;!&ndash; Login Title &ndash;&gt;-->
<!--    <TextView-->
<!--        android:id="@+id/login_title"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/login"-->
<!--        android:textStyle="bold"-->
<!--        android:textSize="40sp"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_below="@+id/login_y_logo"-->
<!--        />-->


<!--    &lt;!&ndash; Email Input&ndash;&gt;-->
<!--    <EditText-->
<!--        android:id="@+id/email_input"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_above="@+id/password_input"-->
<!--        android:autofillHints=""-->
<!--        android:hint="@string/email"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:layout_marginBottom="30dp"/>-->

<!--    &lt;!&ndash; Password Input   &ndash;&gt;-->

<!--    <EditText-->
<!--        android:id="@+id/password_input"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_above="@+id/login_button"-->
<!--        android:autofillHints=""-->
<!--        android:hint="@string/password"-->
<!--        android:inputType="text|textPassword" />-->

<!--    &lt;!&ndash; Login Button   &ndash;&gt;-->
<!--    <Button-->
<!--        android:id="@+id/login_button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:text="@string/login"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_marginBottom="120dp"-->
<!--        android:layout_marginTop="50dp"-->
<!--    />-->

<!--    <Button-->
<!--        android:id="@+id/create_account_button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_marginBottom="55dp"-->
<!--        android:text="Don't have an account? Sign Up" />-->
<!--</RelativeLayout>-->
<LinearLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingHorizontal="30dp">
    <ImageView
        android:id="@+id/login_y_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/y_logo"
        android:src="@drawable/y_logo"
        android:layout_marginTop="30dp" />

    <!-- Login Title -->
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        />


    <!-- Email Input-->
    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="30dp"/>

    <!-- Password Input   -->

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="text|textPassword" />

    <TextView
        android:id="@+id/error_text_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="Email or password is incorrect"
        android:textColor="#FF0000"
        android:visibility="invisible" />
    <!-- Login Button   -->

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="#3F51B5"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_now" />
</LinearLayout>
